@@ -1,3 +1,7 @@
+2006-11-01 Tim
+ PATCH: [ 1586854 ] Web: Change font to Verdana
+  Web\css: all.css print.css
+
 2006-10-30 Tim
  BUG: [ 1586836 ] Web: Translation status say 2.4 is still "latest stable"
   Web\developer\l10n: status.php
